--- a/src/psyclone/.pylintrc
+++ b/src/psyclone/.pylintrc
@@ -5,7 +5,7 @@ max-line-length=79
 
 # fparser dynamically generates *_List classes so pylint can't
 # find them.
-generated-members=Fortran2003.*_List
+generated-members=Fortran2003.*_List,psyir.Lfric*
 
 [DESIGN]
 # Maximum number of parents for a class (see R0901)
