--- a/src/psyclone/tests/.pylintrc
+++ b/src/psyclone/tests/.pylintrc
@@ -16,7 +16,7 @@ enable=import-star-module-level,old-octal-literal,oct-method,unpacking-in-except
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-disable=print-statement,suppressed-message,duplicate-code,no-self-use,too-many-locals,too-many-lines,protected-access,locally-disabled,locally-enabled,too-few-public-methods,too-many-arguments
+disable=print-statement,suppressed-message,duplicate-code,no-self-use,too-many-locals,too-many-lines,protected-access,locally-disabled,locally-enabled,too-few-public-methods,too-many-arguments,use-implicit-booleaness-not-comparison
 
 # Longest test name atm has 64 letters:
 # test_fparser2astprocessor_generate_schedule_unmatching_arguments
