#1620 put back LFRIC_LIB dependence in eg20 Makefile

--- a/examples/lfric/eg20/Makefile
+++ b/examples/lfric/eg20/Makefile
@@ -39,11 +39,18 @@ include ../../common.mk
 
 GENERATED_FILES = test_alg_mod_psy.f90 testkern_mod.F90 test_alg_mod.[fx]90
 
+LFRIC_PATH = ${PSYCLONE_DIR}/src/psyclone/tests/test_files/dynamo0p3/infrastructure
+LFRIC_NAME=lfric
+LFRIC_LIB=$(LFRIC_PATH)/lib$(LFRIC_NAME).a
+
 run: compile
 
-compile: transform
+compile: transform ${LFRIC_LIB}
 	@echo "#1770 Compilation is not supported: the generated code must be "
 	@echo "inserted into an LFRic mini-app."
+
+$(LFRIC_LIB):
+	$(MAKE) -C $(LFRIC_PATH)
 
 # Dependencies
 %.F90:
