#1797 Added support for logical values in read-only verification.

--- a/lib/read_only/lfric/Makefile
+++ b/lib/read_only/lfric/Makefile
@@ -73,7 +73,7 @@ PSYDATA_LIB = lib$(PSYDATA_LIB_NAME).a
 # and double, and for 1-, 2-, 3-, and 4-dimensional arrays. These arguments
 # are used for both base classes: PSyDataBase and ReadOnlyBase to ensure
 # consistent code creation.
-PROCESS_ARGS = -prefix=read_only_verify_ -types=real,int,double \
+PROCESS_ARGS = -prefix=read_only_verify_ -types=int,logical,real,double \
 		       -dims=1,2,3,4
 PROCESS = $$($(PSYDATA_LIB_DIR)/get_python.sh) $(PSYDATA_LIB_DIR)/process.py
 
