#1805 Updated config file to support tracing.

--- a/config/psyclone.cfg
+++ b/config/psyclone.cfg
@@ -48,7 +48,7 @@ REPRODUCIBLE_REDUCTIONS = false
 # Amount to pad the local summation array when REPRODUCIBLE_REDUCTIONS is true
 REPROD_PAD_SIZE = 8
 PSYIR_ROOT_NAME = psyir_tmp
-VALID_PSY_DATA_PREFIXES = profile, extract, read_only_verify, nan_test
+VALID_PSY_DATA_PREFIXES = profile, extract, read_only_verify, nan_test, tracing
 # Specify number of OpenCL devices per node. When combining OpenCL with MPI,
 # the mpirun/mpiexec ranks_per_node parameter must match this number.
 OCL_DEVICES_PER_NODE = 1
