--- a/examples/lfric/eg17/full_example_extract/Makefile
+++ b/examples/lfric/eg17/full_example_extract/Makefile
@@ -1,7 +1,7 @@
 # -----------------------------------------------------------------------------
 # BSD 3-Clause License
 #
-# Copyright (c) 2020-2021, Science and Technology Facilities Council.
+# Copyright (c) 2020-2022, Science and Technology Facilities Council.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -41,9 +41,17 @@
 
 PSYROOT=../../../..
 
+# Set it to 'netcdf' to use the NetCDF writer
+TYPE?=standalone
+
 include $(PSYROOT)/examples/common.mk
 
-GENERATED_FILES = *.o *.mod  $(EXEC) main_alg.f90 main_psy.f90 main-update.nc
+GENERATED_FILES = *.o *.mod  $(EXEC) main_alg.f90 main_psy.f90
+ifeq ($(TYPE), netcdf)
+	GENERATED_FILES += main-update.nc
+else
+	GENERATED_FILES += main-update.binary
+endif
 
 F90 ?= gfortran
 F90FLAGS ?= -Wall -g
@@ -51,14 +59,21 @@ F90FLAGS ?= -Wall -g
 OBJ = main_psy.o main_alg.o testkern_w0_kernel_mod.o
 
 EXEC = extract
-EXTRACT_DIR ?= $(PSYROOT)/lib/extract/netcdf/lfric
-EXTRACT_NAME =_kernel_data_netcdf
+ifeq ($(TYPE), netcdf)
+	EXTRACT_DIR ?= $(PSYROOT)/lib/extract/netcdf/lfric
+	EXTRACT_NAME =_kernel_data_netcdf
+	LDFLAGS += $$(nf-config --flibs)
+else
+	EXTRACT_DIR ?= $(PSYROOT)/lib/extract/standalone/lfric
+	EXTRACT_NAME =_kernel_data_standalone
+endif
 EXTRACT_LIB = $(EXTRACT_DIR)/lib$(EXTRACT_NAME).a
+F90FLAGS += -I$(LFRIC_DIR) -I$(EXTRACT_DIR)
+
 LFRIC_DIR ?= $(PSYROOT)/src/psyclone/tests/test_files/dynamo0p3/infrastructure
 LFRIC_NAME=lfric
 LFRIC_LIB=$(LFRIC_DIR)/lib$(LFRIC_NAME).a
 
-F90FLAGS += -I$(LFRIC_DIR) -I$(EXTRACT_DIR)
 
 transform: main_psy.f90 main_alg.f90
 
@@ -69,7 +84,7 @@ run: compile
 
 $(EXEC): $(LFRIC_LIB) $(EXTRACT_LIB) $(OBJ)
 	$(F90) $(F90FLAGS) $(OBJ) -o $(EXEC) -L$(EXTRACT_DIR) -l$(EXTRACT_NAME) \
-	      -L$(LFRIC_DIR) -l$(LFRIC_NAME) $$(nf-config --flibs)
+	      -L$(LFRIC_DIR) -l$(LFRIC_NAME) $(LDFLAGS)
 
 $(LFRIC_LIB):
 	$(MAKE) -C $(LFRIC_DIR)
