#1813 Support logical datatypes.

--- a/lib/extract/standalone/lfric/Makefile
+++ b/lib/extract/standalone/lfric/Makefile
@@ -58,7 +58,7 @@ F90FLAGS += -I$(INF_INC)
 PSYDATA_LIB_NAME = _kernel_data_standalone
 PSYDATA_LIB = lib$(PSYDATA_LIB_NAME).a
 
-PROCESS_ARGS = -prefix=extract_ -types=int,real,double \
+PROCESS_ARGS = -prefix=extract_ -types=int,logical,real,double \
                        -dims=1,2,3,4
 PROCESS = $$($(PSYDATA_LIB_DIR)/get_python.sh) $(PSYDATA_LIB_DIR)/process.py
 
