--- a/src/psyclone/tests/test_files/dynamo0p3/infrastructure/Makefile
+++ b/src/psyclone/tests/test_files/dynamo0p3/infrastructure/Makefile
@@ -39,31 +39,62 @@ F90 ?= gfortran
 F90FLAGS ?= -Wall -g -fcheck=bound
 BUILD ?= build
 
+# MAKEFILE_LIST is a Gnu-make variable that contains all of the
+# arguments passed to the first invocation of Make. The last entry
+# in this list is the current file.
+this_file := $(abspath $(lastword $(MAKEFILE_LIST)))
+# PSyclone directory is up two from this file
+INFRASTRUCTURE_DIR := $(dir $(this_file))
+
+
+CONFIGURATION_SRC = domain_size_config_mod.f90
 FIELD_SRC = argument_mod.F90 field_mod.F90 field_parent_mod.f90             \
 	integer_field_mod.F90 master_dofmap_mod.F90 polynomial_mod.F90          \
 	pure_abstract_field_mod.f90 r_solver_field_mod.F90 r_tran_field_mod.F90 \
 	stencil_2d_dofmap_mod.f90 stencil_dofmap_helper_functions_mod.f90       \
 	stencil_dofmap_mod.F90
-TMP = $(patsubst %.F90,field/%.o,$(FIELD_SRC))
-FIELD_OBJ = $(patsubst %.f90,field/%.o,$(TMP))
+FUNCTION_SPACE_SRC = fs_continuity_mod.F90 function_space_mod.F90           \
+    function_space_constructor_helper_functions_mod.F90
+INITIALISTATION_SRC = flux_direction_mod.f90
+IO_SRC = file_mod.F90 io_utility_mod.f90
+MESH_SRC = extrusion_mod.f90 mesh_constructor_helper_functions_mod.F90      \
+	mesh_mod.F90 reference_element_mod.F90 global_mesh_base_mod.F90         \
+	mesh_colouring_mod.F90 mesh_map_mod.F90 partition_mod.F90
+OPERATOR_SRC = columnwise_operator_mod.f90 operator_mod.F90                 \
+	operator_parent_mod.f90
+SCALAR_SRC = scalar_mod.F90
+UTILITIES_SRC = constants_mod.F90 count_mod.f90 linked_list_data_mod.F90    \
+	linked_list_mod.F90 matrix_invert_mod.F90 timer_mod.F90                 \
+	coord_transform_mod.F90 cross_product_mod.F90 linked_list_int_mod.F90   \
+	log_mod.F90 mpi_mod.f90
 
-OBJ = global_mesh_base_mod.o mesh_mod.o linked_list_data_mod.o \
-		extrusion_mod.o mesh_colouring_mod.o mesh_constructor_helper_functions_mod.o \
-		domain_size_config_mod.o coord_transform_mod.o matrix_invert_mod.o \
-		cross_product_mod.o partition_mod.o mpi_mod.o linked_list_int_mod.o \
-		log_mod.o linked_list_mod.o reference_element_mod.o function_space_mod.o \
-		fs_continuity_mod.o \
-		function_space_constructor_helper_functions_mod.o  \
-		scalar_mod.o count_mod.o \
-		operator_mod.o columnwise_operator_mod.o operator_parent_mod.o \
-		kernel_mod.o constants_mod.o \
-		mesh_map_mod.o  \
-		timer_mod.o io_utility_mod.o \
-		$(FIELD_OBJ)
+DIRS = configuration field function_space initialisation io mesh operator \
+	scalar utilities
+
+F90FLAGS += $(foreach dir,$(DIRS),-I ../$(dir))
+
+CONFIGURATION_PATH_SRC = $(addprefix configuration/,$(CONFIGURATION_SRC))
+FIELD_PATH_SRC = $(addprefix field/,$(FIELD_SRC))
+FUNCTION_SPACE_PATH_SRC = $(addprefix function_space/,$(FUNCTION_SPACE_SRC))
+INITIALISATION_PATH_SRC = $(addprefix initialisation/,$(INITIALISATION_SRC))
+IO_PATH_SRC = $(addprefix io/,$(IO_SRC))
+MESH_PATH_SRC = $(addprefix mesh/,$(MESH_SRC))
+OPERATOR_PATH_SRC = $(addprefix operator/,$(OPERATOR_SRC))
+SCALAR_PATH_SRC = $(addprefix scalar/,$(SCALAR_SRC))
+UTILITIES_PATH_SRC = $(addprefix utilities/,$(UTILITIES_SRC))
+
+ALL_SRC = $(CONFIGURATION_PATH_SRC) $(FIELD_PATH_SRC)                    \
+	$(FUNCTION_SPACE_PATH_SRC) $(INITIALISATION_PATH_SRC) $(IO_PATH_SRC) \
+	$(MESH_PATH_SRC) $(OPERATOR_PATH_SRC) $(SCALAR_PATH_SRC)             \
+	$(UTILITIES_PATH_SRC)
+
+# Replace all *.F90 and *.f90 with .o to get a list of all object files.
+OBJ = $(patsubst %.f90,%.o,$(patsubst %.F90,%.o,$(ALL_SRC)))
 
 # Additional object files required for netcdf support
-OBJ_NETCDF = global_mesh_netcdf_mod.o ugrid_2d_mod.o ugrid_file_mod.o file_mod.o \
-		ugrid_generator_mod.o ncdf_quad_mod.o
+OBJ_NETCDF = io/global_mesh_netcdf_mod.o io/ugrid_2d_mod.o     \
+	io/ugrid_file_mod.o io/file_mod.o io/ugrid_generator_mod.o \
+	io/ncdf_quad_mod.o
 
 # Note that the files
 # quadrature_edge_mod.F90 quadrature_face_mod.F90 quadrature_mod.F90
@@ -73,26 +104,23 @@ OBJ_NETCDF = global_mesh_netcdf_mod.o ugrid_2d_mod.o ugrid_file_mod.o file_mod.o
 # a stand-alone LFRic example, and as such are not compiled when creating
 # an infrastructure library.
 
-.PHONY: standalone netcdf default
-
-# MAKEFILE_LIST is a Gnu-make variable that contains all of the
-# arguments passed to the first invocation of Make. The last entry
-# in this list is the current file.
-this_file := $(abspath $(lastword $(MAKEFILE_LIST)))
-# PSyclone directory is up two from this file
-INFRASTRUCTURE_DIR := $(dir $(this_file))
+.PHONY: standalone netcdf default dirs
 
 default:
-	cd $(BUILD)
-	mkdir -p field
-	bash -c "cd $(BUILD); make -f $(INFRASTRUCTURE_DIR)/Makefile standalone"
+	mkdir -p $(BUILD)
+	# We need to force to re-read the dependency file from the build
+	# directory ... just calling make does not do this
+	$(MAKE) -C $(BUILD) -f $(INFRASTRUCTURE_DIR)/Makefile standalone
+	#bash -c "cd $(BUILD); make -f $(INFRASTRUCTURE_DIR)/Makefile standalone"
 
 # Standalone target, no netcdf dependency:
 # ----------------------------------------
 standalone: liblfric.a
-liblfric.a: $(OBJ)
+liblfric.a: dirs $(OBJ)
 	$(AR) $(ARFLAGS) $@ $(OBJ)
 
+dirs:
+	 mkdir -p $(DIRS)
 
 # Netcdf target, like standalone but with support for netcdf files:
 # -----------------------------------------------------------------
@@ -106,26 +134,40 @@ liblfric_netcdf.a: $(OBJ) $(OBJ_NETCDF)
 # ------------
 include $(INFRASTRUCTURE_DIR)/dependency
 
-%.o: ../%.F90
-	$(F90) $(F90FLAGS) -c $< -o $@
+# Compilation rules
+# -----------------
 
-%.o: ../%.f90
-	$(F90) $(F90FLAGS) -c $< -o $@
+# The following function defines two rules to compile SOMEDIR/*.F90
+# and SOMEDIR/*.f90 into SOMEDIR/*.o. Since LFRic stores the mod and
+# .o files in the same directory, we mirror this behaviour here. Instead
+# of using compiler-specific flags to control the output location for
+# .mod files, this changes into the directory where the .o files should
+# be stored. This avoids the hassle of handling compiler specific flags.
+# An example for the rule created:
+# field/%.o: $(INFRASTRUCTURE)/field/%.f90
+#field/%.o: /home/joerg/work/psyclone/src/psyclone/tests/test_files/dynamo0p3/infrastructure//field/%.f90
+#cd field; $(F90) $(F90FLAGS) -c $< -o $(notdir $@)
 
-field/%.o: ../field/%.F90
-	$(F90) $(F90FLAGS) -c $< -o $@
 
-field/%.o: ../field/%.f90
-	$(F90) $(F90FLAGS) -c $< -o $@
+define compile_rule_template =
+$(1)/%.o:	$$(INFRASTRUCTURE_DIR)/$(1)/%.f90
+	cd $(1); $$(F90) $$(F90FLAGS) -c $$< -o $$(notdir $$@)
 
+$(1)/%.o:	$$(INFRASTRUCTURE_DIR)/$(1)/%.F90
+	cd $(1); $$(F90) $$(F90FLAGS) -c $$< -o $$(notdir $$@)
+endef
 
+xx:
+	echo $(call compile_rule_template,field)
+
+$(foreach dir,$(DIRS),$(eval $(call compile_rule_template,$(dir))))
 
 %_psy.f90:	%.x90
 	psyclone --config ../../../config/psyclone.cfg -opsy $*_psy.f90 -oalg $*_alg.f90 $<
 
 clean:
 	rm -f $(BUILD)/*.o $(BUILD)/*.mod
-	rm -f $(BUILD)/field/*.o $(BUILD)/field/*.mod
-	rm -f $(LIB) liblfric.a liblfric_netcdf.a
+	rm -f $(BUILD)/*/*.o $(BUILD)/*/*.mod
+	rm -f $(BUILD)/liblfric.a $(BUILD)/liblfric_netcdf.a
 
 allclean: clean
